--- a/chatbot_frontend/pyproject.toml
+++ b/chatbot_frontend/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "hospital_neo4j_etl"
+name = "chatbot_frontend"
 version = "0.1"
 dependencies = [
-   "neo4j==5.14.1",
-   "retry==0.9.2"
+   "requests==2.32.3",
+   "streamlit==1.36.0"
 ]
 
 [project.optional-dependencies]
